kubernetes/manifests/simple-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-loadbalancer
  namespace: default
  labels:
    app: nodejs
    component: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
